# echomorse

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  README.md  TODO.md  pyproject.toml
.github/: PULL_REQUEST_TEMPLATE.md
.github/workflows/: ci.yml  release.yml
example/BI1MHK/: voice_config.json
example/caixukun/: niganma.m4a  voice_config.json
src/echomorse/utils/: voice_manager.py
tests/: test_integration.py
